SyncAuthManager: enforce supposed invariant (oneof token,request,retry)

SyncAuthManager has a supposed invariant that only one of an access token,
an access token request, or a pending retry can exist at any one time.
However, it didn't properly enforce this, so in some cases the invariant
could be violated. This CL fixes that, and adds a bunch of DCHECKs to make
sure.

Bug: 877440
Change-Id: I756e41d5045edb36fcfaa53104092a4f299a1e20
Reviewed-on: https://chromium-review.googlesource.com/1188472
Commit-Queue: Marc Treib <treib@chromium.org>
Reviewed-by: Mohamed Amir Yosef <mamir@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586725}
Former-commit-id: 92d3cf591eaa5e1ab986923e6a30331724b63c74